# d20-client

./: .gitignore  .graphqlconfig  .travis.yml  Cargo.toml  README.md  babel.config.js  index.html  package.json  schema.json  tsconfig.json  webpack.config.ts
.github/: dependabot.yml
.github/workflows/: audit.yaml  codeql-analysis.yml  nodejs.yml
js/: index.ts  noopServiceWorkerMiddleware.ts
public/: index.html  manifest.json
scripts/: optimize_wasm.ts
src/: lib.rs
src/graphql/: roll.graphql
