[package]
authors = ["Ben Brandt"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Webpack project!"
license = "Apache-2.0/MIT"
name = "d20-client"
readme = "./README.md"
repository = "https://github.com/benbrandt/d20-client"
version = "0.1.0"
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1"
js-sys = "0.3"
seed = { git = "https://github.com/David-OConnor/seed" }
serde = { version = "1", features = ['derive'] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.3"
web-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
lto = true
opt-level = 's'
